# bewa

./: .env.example  .gitignore  README.md  deploy.bat  deploy_vps.py  fix_env_vps.py  fix_pass_vps.py  fix_vps_api.py  force_patch_vps.py  main.py  migrate_data.py  requirements.txt  reset_db.bat  run_dev.py  start.bat  sync_master.py
.qwen/: settings.json
archive/: AUDIT_FIX_COMPLETE.md  BUSINESS_LOGIC_FIX.md  CHANGELOG.md  DATA_ACCURACY_FIXES.md  DUPLICATE_FIX.md  FULL_AUDIT_REPORT.md  HEATMAP_AUDIT_REPORT.md  HEATMAP_DATA_ISSUE.md  HEATMAP_FIX_COMPLETE.md  LICO_REPORT_FEATURES.md  LICO_REPORT_IMPLEMENTATION.md  LOGGING.md  MONITORING_DATA_AUDIT.md  MONITORING_FINAL_FIX.md  MONITORING_REPORT_FIXES.md  MONITORING_REPORT_IMPLEMENTATION.md  REPORT_TEST_RESULTS.md  SCRIPTS.md  SMART_MERGE_LOGIC.md  TEST_ENCODING.md  UPLOAD_FILE_FIX.md  UPLOAD_FLOW_FIX.md  UPLOAD_UI_IMPROVEMENT.md  UPLOAD_VALIDATION_FEATURE.md  add_regis_retur_column.py  cleanup_duplicates.py  excel_structure_report.txt  validate_data.py
automation/: automation_orchestrator.py  config.py  jnt_downloader.py  jnt_page.py
config/: __init__.py  constants.py  database.py  logger.py
models/: __init__.py  shipment.py
pod-desktop/src-tauri/: Cargo.toml  tauri.conf.json
pod-desktop/src-tauri/scratch/: diag_excel.rs
pod-desktop/src-tauri/src/: assets.rs  constants.rs  lib.rs  main.rs  server.rs
pod-desktop/src-tauri/src/api/: desktop.rs  mobile.rs
pod-desktop/src-tauri/src/db/: mod.rs  models.rs  queries.rs
pod-desktop/src-tauri/src/utils/: file_handler.rs  mod.rs  normalization.rs
web/: README.md  (+3 more)
(+323 files in other folders)
